--- a/Go/Proxy Server/kek.html
+++ b/Go/Proxy Server/kek.html
@@ -24,7 +24,7 @@
     </div>
     <form action="/process" method="post">
         <div>
-            <textarea class="kek" placeholder="Enter your url here" type="text" name="yourl"></textarea>
+            <textarea class="kek"  type="text" name="yourl">yandex.ru</textarea>
         </div>
         <div>
             <input class="lol" type="submit"/>
