--- a/Go/Proxy Server/kek.html
+++ b/Go/Proxy Server/kek.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div>
-        Proxy-server KoTopbIy MbI 3acJIyJILuJI
+        ANONYMIZER
 
     </div>
     <form action="/process" method="post">
